// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a SingleMediaDropzone 1`] = `
<div
  class="mediaContainer default"
  role="presentation"
  tabindex="0"
>
  <img
    class="thumbnail"
    src="http://lorempixel.com/400/400"
  />
  <div
    class="uploadIndicatorContainer"
  >
    <div
      class="uploadIndicator"
    >
      <div>
        <span
          aria-label="su-upload"
          class="su-upload uploadIcon"
        />
      </div>
    </div>
  </div>
  <input
    style="border:0;clip:rect(0, 0, 0, 0);clip-path:inset(50%);height:1px;margin:0 -1px -1px 0;overflow:hidden;padding:0;position:absolute;width:1px;white-space:nowrap"
    tabindex="-1"
    type="file"
  />
</div>
`;

exports[`Render a SingleMediaDropzone in disabled state 1`] = `
<div
  class="mediaContainer default disabled"
  role="presentation"
>
  <img
    class="thumbnail"
    src="http://lorempixel.com/400/400"
  />
  <div
    class="uploadIndicatorContainer"
  >
    <div
      class="uploadIndicator"
    >
      <div>
        <span
          aria-label="su-upload"
          class="su-upload uploadIcon"
        />
      </div>
    </div>
  </div>
  <input
    style="border:0;clip:rect(0, 0, 0, 0);clip-path:inset(50%);height:1px;margin:0 -1px -1px 0;overflow:hidden;padding:0;position:absolute;width:1px;white-space:nowrap"
    tabindex="-1"
    type="file"
  />
</div>
`;

exports[`Render a SingleMediaDropzone while uploading 1`] = `
<div
  class="mediaContainer default"
  role="presentation"
  tabindex="0"
>
  <img
    class="thumbnail"
    src="http://lorempixel.com/400/400"
  />
  <div
    class="progressbar"
  >
    <div
      style="width:200px;height:200px"
    >
      <svg
        class="root "
        data-test-id="CircularProgressbar"
        viewBox="0 0 100 100"
      >
        <circle
          class="background"
          cx="50"
          cy="50"
          r="50"
        />
        <path
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          fill-opacity="0"
          stroke-width="8"
          style="stroke-dasharray:289.02652413026095px 289.02652413026095px;stroke-dashoffset:0px"
        />
        <path
          class="path"
          d="
      M 50,50
      m 0,-46
      a 46,46 0 1 1 0,92
      a 46,46 0 1 1 0,-92
    "
          fill-opacity="0"
          stroke-width="8"
          style="stroke-dasharray:289.02652413026095px 289.02652413026095px;stroke-dashoffset:144.51326206513048px"
        />
        <text
          class="text"
          x="50"
          y="50"
        >
          50%
        </text>
      </svg>
    </div>
  </div>
  <input
    style="border:0;clip:rect(0, 0, 0, 0);clip-path:inset(50%);height:1px;margin:0 -1px -1px 0;overflow:hidden;padding:0;position:absolute;width:1px;white-space:nowrap"
    tabindex="-1"
    type="file"
  />
</div>
`;

exports[`Render a SingleMediaDropzone with a MimeTypeIndicator if an error appeared during image loading 1`] = `
<div
  class="mediaContainer default"
  role="presentation"
  tabindex="0"
>
  <div
    class="mimeTypeIndicator"
  >
    <div
      class="mimeTypeIndicator"
      style="color: rgb(255, 255, 255); font-size: 100px; background-color: rgb(246, 126, 0);"
    >
      <span
        aria-label="fa-file-video-o"
        class="fa fa-file-video-o"
      />
    </div>
  </div>
  <div
    class="uploadIndicatorContainer"
  >
    <div
      class="uploadIndicator"
    >
      <div>
        <span
          aria-label="su-upload"
          class="su-upload uploadIcon"
        />
      </div>
    </div>
  </div>
  <input
    style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    tabindex="-1"
    type="file"
  />
</div>
`;

exports[`Render a SingleMediaDropzone with a loader if image has not been loaded yet 1`] = `
<div
  class="mediaContainer default"
  role="presentation"
  tabindex="0"
>
  <img
    class="thumbnail"
    src="test.jpg"
  />
  <div
    class="spinner"
    style="width: 40px; height: 40px;"
  >
    <div
      class="doubleBounce1"
    />
    <div
      class="doubleBounce2"
    />
  </div>
  <div
    class="uploadIndicatorContainer"
  >
    <div
      class="uploadIndicator"
    >
      <div>
        <span
          aria-label="su-upload"
          class="su-upload uploadIcon"
        />
      </div>
    </div>
  </div>
  <input
    style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    tabindex="-1"
    type="file"
  />
</div>
`;

exports[`Render a SingleMediaDropzone with an error text 1`] = `
Array [
  <div
    class="mediaContainer default"
    role="presentation"
    tabindex="0"
  >
    <div
      class="emptyIndicator"
    >
      <span
        aria-label="su-user"
        class="su-user"
      />
    </div>
    <div
      class="uploadIndicatorContainer"
    >
      <div
        class="uploadIndicator"
      >
        <div>
          <span
            aria-label="su-upload"
            class="su-upload uploadIcon"
          />
        </div>
      </div>
    </div>
    <input
      style="border:0;clip:rect(0, 0, 0, 0);clip-path:inset(50%);height:1px;margin:0 -1px -1px 0;overflow:hidden;padding:0;position:absolute;width:1px;white-space:nowrap"
      tabindex="-1"
      type="file"
    />
  </div>,
  <div
    class="errorText"
  >
    some-custom-error-message
  </div>,
]
`;

exports[`Render a SingleMediaDropzone with the default empty icon 1`] = `
<div
  class="mediaContainer default"
  role="presentation"
  tabindex="0"
>
  <div
    class="emptyIndicator"
  >
    <span
      aria-label="su-image"
      class="su-image"
    />
  </div>
  <div
    class="uploadIndicatorContainer"
  >
    <div
      class="uploadIndicator"
    >
      <div>
        <span
          aria-label="su-upload"
          class="su-upload uploadIcon"
        />
      </div>
    </div>
  </div>
  <input
    style="border:0;clip:rect(0, 0, 0, 0);clip-path:inset(50%);height:1px;margin:0 -1px -1px 0;overflow:hidden;padding:0;position:absolute;width:1px;white-space:nowrap"
    tabindex="-1"
    type="file"
  />
</div>
`;

exports[`Render a SingleMediaDropzone with the passed empty icon 1`] = `
<div
  class="mediaContainer default"
  role="presentation"
  tabindex="0"
>
  <div
    class="emptyIndicator"
  >
    <span
      aria-label="su-user"
      class="su-user"
    />
  </div>
  <div
    class="uploadIndicatorContainer"
  >
    <div
      class="uploadIndicator"
    >
      <div>
        <span
          aria-label="su-upload"
          class="su-upload uploadIcon"
        />
      </div>
    </div>
  </div>
  <input
    style="border:0;clip:rect(0, 0, 0, 0);clip-path:inset(50%);height:1px;margin:0 -1px -1px 0;overflow:hidden;padding:0;position:absolute;width:1px;white-space:nowrap"
    tabindex="-1"
    type="file"
  />
</div>
`;

exports[`Render a SingleMediaDropzone with the round skin 1`] = `
<div
  class="mediaContainer round"
  role="presentation"
  tabindex="0"
>
  <img
    class="thumbnail"
    src="http://lorempixel.com/400/400"
  />
  <div
    class="uploadIndicatorContainer"
  >
    <div
      class="uploadIndicator"
    >
      <div>
        <span
          aria-label="su-upload"
          class="su-upload uploadIcon"
        />
      </div>
    </div>
  </div>
  <input
    style="border:0;clip:rect(0, 0, 0, 0);clip-path:inset(50%);height:1px;margin:0 -1px -1px 0;overflow:hidden;padding:0;position:absolute;width:1px;white-space:nowrap"
    tabindex="-1"
    type="file"
  />
</div>
`;

exports[`Render a SingleMediaDropzone without a loader if image has been loaded after an error occured before 1`] = `
<div
  class="mediaContainer default"
  role="presentation"
  tabindex="0"
>
  <img
    class="thumbnail"
    src="test.jpg"
  />
  <div
    class="uploadIndicatorContainer"
  >
    <div
      class="uploadIndicator"
    >
      <div>
        <span
          aria-label="su-upload"
          class="su-upload uploadIcon"
        />
      </div>
    </div>
  </div>
  <input
    style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    tabindex="-1"
    type="file"
  />
</div>
`;

exports[`Render a SingleMediaDropzone without a loader if image has been loaded yet 1`] = `
<div
  class="mediaContainer default"
  role="presentation"
  tabindex="0"
>
  <img
    class="thumbnail"
    src="test.jpg"
  />
  <div
    class="uploadIndicatorContainer"
  >
    <div
      class="uploadIndicator"
    >
      <div>
        <span
          aria-label="su-upload"
          class="su-upload uploadIcon"
        />
      </div>
    </div>
  </div>
  <input
    style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    tabindex="-1"
    type="file"
  />
</div>
`;
